more dark mode fixes and tab item fade for tablet and mobile

--- a/src/styles/elements/_header.scss
+++ b/src/styles/elements/_header.scss
@@ -228,6 +228,7 @@ header {
         outline: none;
         background: none;
         background: var(--gray);
+        color: var(--p);
         border: none;
         border-image: none;
         border-radius: 5px;
