--- a/src/styles/pages/resources/_getting-started.scss
+++ b/src/styles/pages/resources/_getting-started.scss
@@ -184,12 +184,13 @@
 
         @include breakpoint($tablet-break) {
           width: $col-vw * 11.5;
-          top: -$col-vw / 2;
+          top: -$col-vw;
+          height: $col-vw * 2;
           left: 0;
         }
 
         @include breakpoint($mobile-break) {
-          width: $col-vw * 11.75;
+          width: $col-vw * 12;
         }
       }
       .col-inner {
