--- a/src/styles/pages/resources/_resources.scss
+++ b/src/styles/pages/resources/_resources.scss
@@ -43,6 +43,7 @@
 
             @include breakpoint($tablet-break) {
               width: $col-vw * 10.5;
+              height: $col-vw * 2;
               right: $col-vw/2;
             }
           }
